Replace uses of v8::Persistent with ScopedPersistent.

Copyable persistents have been mostly eliminated from the Blink code
base, replaced with ScopedPersistent.

Re-tested locally.

BUG=608576
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/1983953002
Cr-Commit-Position: refs/heads/master@{#394024}

Former-commit-id: 3678e4df9b5256858d965ae8529dc7fb6b14647a