third_party/WebKit/Source/modules/webgl/WebGLFramebuffer.cpp
@@ -422,7 +422,7 @@ GLenum WebGLFramebuffer::getDrawBuffer(GLenum drawBuffer)
     return GL_NONE;
 }
 
-V8CopyablePersistent<v8::Array>* WebGLFramebuffer::getPersistentCache()
+ScopedPersistent<v8::Array>* WebGLFramebuffer::getPersistentCache()
 {
     return &m_attachmentWrappers;
 }
