third_party/WebKit/Source/modules/webgl/WebGLProgram.cpp
@@ -147,7 +147,7 @@ bool WebGLProgram::detachShader(WebGLShader* shader)
     }
 }
 
-V8CopyablePersistent<v8::Array>* WebGLProgram::getPersistentCache()
+ScopedPersistent<v8::Array>* WebGLProgram::getPersistentCache()
 {
     return &m_shaderWrappers;
 }
